<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.streamshub</groupId>
        <artifactId>streamshub-mcp</artifactId>
        <version>0.2.0-SNAPSHOT</version>
    </parent>

    <artifactId>systemtest</artifactId>
    <name>StreamsHub MCP System Tests</name>
    <description>End-to-end system tests for Strimzi MCP server</description>

    <properties>
        <kubetest4j.version>1.2.1</kubetest4j.version>
        <quarkus.mcp.server.test.version>1.12.0</quarkus.mcp.server.test.version>
        <strimzi.test-clients.version>0.14.0</strimzi.test-clients.version>
        <allure.junit.version>2.35.2</allure.junit.version>
        <allure.report.version>2.39.0</allure.report.version>
        <allure.maven.version>3.0.1</allure.maven.version>
        <log4j.version>2.26.0</log4j.version>
        <slf4j.version>2.0.18</slf4j.version>
        <!-- Skip system tests by default — enable with -Psystemtest -->
        <skipITs>true</skipITs>
        <!-- Define empty argLine so parent's @{argLine} doesn't fail -->
        <argLine></argLine>
        <!-- Coverage is measured on unit/component tests, not system tests -->
        <jacoco.skip>true</jacoco.skip>
        <!-- KafkaConnect image build configuration -->
        <exec-maven-plugin.version>3.5.0</exec-maven-plugin.version>
        <connect.image>quay.io/streamshub/mcp-connect-test:latest</connect.image>
        <connect.kafka.version>4.2.0</connect.kafka.version>
        <container.engine>podman</container.engine>
        <container.platform/>
        <connect.image.push>true</connect.image.push>
    </properties>

    <dependencies>
        <!-- kubetest4j -->
        <dependency>
            <groupId>io.skodjob.kubetest4j</groupId>
            <artifactId>junit-extension</artifactId>
            <version>${kubetest4j.version}</version>
        </dependency>
        <dependency>
            <groupId>io.skodjob.kubetest4j</groupId>
            <artifactId>kubernetes-resources</artifactId>
            <version>${kubetest4j.version}</version>
        </dependency>

        <!-- MCP client (compile scope — used in main support classes, not just tests) -->
        <dependency>
            <groupId>io.quarkiverse.mcp</groupId>
            <artifactId>quarkus-mcp-server-test</artifactId>
            <version>${quarkus.mcp.server.test.version}</version>
            <scope>compile</scope>
            <exclusions>
                <!-- Exclude JBoss SLF4J provider — we use log4j2 -->
                <exclusion>
                    <groupId>org.jboss.slf4j</groupId>
                    <artifactId>slf4j-jboss-logmanager</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- OpenShift client (for Route creation) -->
        <dependency>
            <groupId>io.fabric8</groupId>
            <artifactId>openshift-client</artifactId>
        </dependency>

        <!-- Strimzi API -->
        <dependency>
            <groupId>io.strimzi</groupId>
            <artifactId>api</artifactId>
        </dependency>

        <!-- strimzi test-clients builders -->
        <dependency>
            <groupId>io.strimzi.test-clients</groupId>
            <artifactId>builders</artifactId>
            <version>${strimzi.test-clients.version}</version>
        </dependency>

        <!-- Allure reporting -->
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-jupiter</artifactId>
            <version>${allure.junit.version}</version>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j2-impl</artifactId>
            <version>${log4j.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Compile test sources (in src/test/java) -->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
            <!-- Run integration tests via Failsafe -->
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${surefire-plugin.version}</version>
                <configuration>
                    <includes>
                        <include>**/*ST.java</include>
                    </includes>
                    <systemPropertyVariables>
                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                    </systemPropertyVariables>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- Checkstyle -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
            </plugin>
            <!-- Allure report generation -->
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure.maven.version}</version>
                <configuration>
                    <reportVersion>${allure.report.version}</reportVersion>
                    <resultsDirectory>${project.build.directory}/allure-results</resultsDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>systemtest</id>
            <properties>
                <skipITs>false</skipITs>
            </properties>
        </profile>
        <profile>
            <id>build-connect-image</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>${exec-maven-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>build-connect-image</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>${project.basedir}/src/main/resources/connect/build-connect-image.sh</executable>
                                    <environmentVariables>
                                        <CONTAINER_ENGINE>${container.engine}</CONTAINER_ENGINE>
                                        <CONTAINER_PLATFORM>${container.platform}</CONTAINER_PLATFORM>
                                        <CONNECT_IMAGE_PUSH>${connect.image.push}</CONNECT_IMAGE_PUSH>
                                    </environmentVariables>
                                    <arguments>
                                        <argument>${connect.image}</argument>
                                        <argument>STRIMZI_VERSION=${strimzi.version}</argument>
                                        <argument>KAFKA_VERSION=${connect.kafka.version}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
